scrollbar reenabled und h-scrollbug fixed

--- a/styles/classes.scss
+++ b/styles/classes.scss
@@ -23,34 +23,34 @@
   color: $sec-color;
 }
 
-@include media('>tablet-l') {
-  /* width */
-  ::-webkit-scrollbar {
-    display: none;
-    width: 6px;
-  }
+// @include media('>tablet-l') {
+//   /* width */
+//   ::-webkit-scrollbar {
+//     display: none;
+//     width: 6px;
+//   }
 
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
+//   /* Track */
+//   ::-webkit-scrollbar-track {
+//     background-color: transparent;
+//   }
 
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: $brand-color;
-  }
+//   /* Handle */
+//   ::-webkit-scrollbar-thumb {
+//     background: $brand-color;
+//   }
 
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: $main-color;
-  }
-}
+//   /* Handle on hover */
+//   ::-webkit-scrollbar-thumb:hover {
+//     background: $main-color;
+//   }
+// }
 
-//für mozilla und IE
-html {
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
+// //für mozilla und IE
+// html {
+//   scrollbar-width: none;
+//   -ms-overflow-style: none;
+// }
 
 // .site-content {
 //   @include vh(100, min-height);
